Updated to be in parallell with svn version of ofbiz