@@ -1,4 +1,5 @@
 /*
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -18,16 +19,17 @@
  */
 package org.apache.ofbiz.entity;
 
-import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.net.URL;
 import java.sql.Timestamp;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutionException;
@@ -47,7 +49,7 @@ import org.apache.ofbiz.base.util.UtilDateTime;
 import org.apache.ofbiz.base.util.UtilFormatOut;
 import org.apache.ofbiz.base.util.UtilGenerics;
 import org.apache.ofbiz.base.util.UtilMisc;
-import org.apache.ofbiz.base.util.UtilObject;
+import org.apache.ofbiz.base.util.UtilProperties;
 import org.apache.ofbiz.base.util.UtilValidate;
 import org.apache.ofbiz.base.util.UtilXml;
 import org.apache.ofbiz.entity.cache.Cache;
@@ -80,6 +82,7 @@ import org.apache.ofbiz.entity.util.EntityListIterator;
 import org.apache.ofbiz.entity.util.EntityQuery;
 import org.apache.ofbiz.entity.util.EntityStoreOptions;
 import org.apache.ofbiz.entity.util.SequenceUtil;
+import org.apache.ofbiz.entityext.eca.EntityEcaUtil;
 import org.w3c.dom.Document;
 import org.w3c.dom.Element;
 import org.w3c.dom.Node;
@@ -97,6 +100,8 @@ public class GenericDelegator implements Delegator {
     protected ModelGroupReader modelGroupReader = null;
     /** This flag is only here for lower level technical testing, it shouldn't be user configurable (or at least I don't think so yet); when true all operations without a transaction will be wrapped in one; seems to be necessary for some (all?) XA aware connection pools, and should improve overall stability and consistency */
     public static final boolean alwaysUseTransaction = true;
+    // TODO should this is be handled by tenant?
+    public static final boolean saveEntitySyncRemoveInfo = UtilProperties.getPropertyAsBoolean("general", "saveEntitySyncRemove", false);
 
     protected String delegatorBaseName = null;
     protected String delegatorFullName = null;
@@ -107,16 +112,16 @@ public class GenericDelegator implements Delegator {
 
     protected Cache cache = null;
 
-    protected final AtomicReference<Future<DistributedCacheClear>> distributedCacheClear = new AtomicReference<Future<DistributedCacheClear>>();
+    protected final AtomicReference<Future<DistributedCacheClear>> distributedCacheClear = new AtomicReference<>();
     protected boolean warnNoEcaHandler = false;
-    protected final AtomicReference<Future<EntityEcaHandler<?>>> entityEcaHandler = new AtomicReference<Future<EntityEcaHandler<?>>>();
-    protected final AtomicReference<SequenceUtil> AtomicRefSequencer = new AtomicReference<SequenceUtil>(null);
+    protected final AtomicReference<Future<EntityEcaHandler<?>>> entityEcaHandler = new AtomicReference<>();
+    protected final AtomicReference<SequenceUtil> AtomicRefSequencer = new AtomicReference<>(null);
     protected EntityCrypto crypto = null;
 
     /** A ThreadLocal variable to allow other methods to specify a user identifier (usually the userLoginId, though technically the Entity Engine doesn't know anything about the UserLogin entity) */
-    protected static ThreadLocal<List<String>> userIdentifierStack = new ThreadLocal<List<String>>();
+    private static final ThreadLocal<List<String>> userIdentifierStack = new ThreadLocal<>();
     /** A ThreadLocal variable to allow other methods to specify a session identifier (usually the visitId, though technically the Entity Engine doesn't know anything about the Visit entity) */
-    protected static ThreadLocal<List<String>> sessionIdentifierStack = new ThreadLocal<List<String>>();
+    private static final ThreadLocal<List<String>> sessionIdentifierStack = new ThreadLocal<>();
 
     private boolean testMode = false;
     private boolean testRollbackInProgress = false;
@@ -126,7 +131,7 @@ public class GenericDelegator implements Delegator {
     protected static List<String> getUserIdentifierStack() {
         List<String> curValList = userIdentifierStack.get();
         if (curValList == null) {
-            curValList = new LinkedList<String>();
+            curValList = new LinkedList<>();
             userIdentifierStack.set(curValList);
         }
         return curValList;
@@ -144,9 +149,8 @@ public class GenericDelegator implements Delegator {
         List<String> curValList = getUserIdentifierStack();
         if (curValList.size() == 0) {
             return null;
-        } else {
-            return curValList.remove(0);
         }
+        return curValList.remove(0);
     }
 
     public static void clearUserIdentifierStack() {
@@ -157,7 +161,7 @@ public class GenericDelegator implements Delegator {
     protected static List<String> getSessionIdentifierStack() {
         List<String> curValList = sessionIdentifierStack.get();
         if (curValList == null) {
-            curValList = new LinkedList<String>();
+            curValList = new LinkedList<>();
             sessionIdentifierStack.set(curValList);
         }
         return curValList;
@@ -175,9 +179,8 @@ public class GenericDelegator implements Delegator {
         List<String> curValList = getSessionIdentifierStack();
         if (curValList.size() == 0) {
             return null;
-        } else {
-            return curValList.remove(0);
         }
+        return curValList.remove(0);
     }
 
     public static void clearSessionIdentifierStack() {
@@ -190,7 +193,6 @@ public class GenericDelegator implements Delegator {
 
     /** Only allow creation through the factory method */
     protected GenericDelegator(String delegatorFullName) throws GenericEntityException {
-        //if (Debug.infoOn()) Debug.logInfo("Creating new Delegator with name \"" + delegatorFullName + "\".", module);
         this.setDelegatorNames(delegatorFullName);
         this.delegatorInfo = EntityConfig.getInstance().getDelegator(delegatorBaseName);
 
@@ -224,7 +226,7 @@ public class GenericDelegator implements Delegator {
         cache = new Cache(delegatorFullName);
 
         // do the entity model check
-        List<String> warningList = new LinkedList<String>();
+        List<String> warningList = new LinkedList<>();
         Debug.logInfo("Doing entity definition check...", module);
         ModelEntityChecker.checkEntities(this, warningList);
         if (warningList.size() > 0) {
@@ -236,7 +238,7 @@ public class GenericDelegator implements Delegator {
 
         // initialize helpers by group
         Set<String> groupNames = getModelGroupReader().getGroupNames(delegatorBaseName);
-        List<Future<Void>> futures = new LinkedList<Future<Void>>();
+        List<Future<Void>> futures = new LinkedList<>();
         for (String groupName: groupNames) {
             futures.add(ExecutionPool.GLOBAL_BATCH.submit(createHelperCallable(groupName)));
         }
@@ -282,12 +284,9 @@ public class GenericDelegator implements Delegator {
     }
 
     protected Callable<Void> createHelperCallable(final String groupName) {
-        return new Callable<Void>() {
-            @Override
-            public Void call() {
-                initializeOneGenericHelper(groupName);
-                return null;
-            }
+        return () -> {
+            initializeOneGenericHelper(groupName);
+            return null;
         };
     }
 
@@ -313,12 +312,8 @@ public class GenericDelegator implements Delegator {
             return;
         }
 
-        Callable<EntityEcaHandler<?>> creator = new Callable<EntityEcaHandler<?>>() {
-            public EntityEcaHandler<?> call() {
-                return createEntityEcaHandler();
-            }
-        };
-        FutureTask<EntityEcaHandler<?>> futureTask = new FutureTask<EntityEcaHandler<?>>(creator);
+        Callable<EntityEcaHandler<?>> creator = () -> createEntityEcaHandler();
+        FutureTask<EntityEcaHandler<?>> futureTask = new FutureTask<>(creator);
         if (this.entityEcaHandler.compareAndSet(null, futureTask)) {
             // This needs to use BATCH, as the service engine might add it's own items into a thread pool.
             ExecutionPool.GLOBAL_BATCH.submit(futureTask);
@@ -335,15 +330,11 @@ public class GenericDelegator implements Delegator {
 
             try {
                 Class<?> eecahClass = loader.loadClass(entityEcaHandlerClassName);
-                EntityEcaHandler<?> entityEcaHandler = UtilGenerics.cast(eecahClass.newInstance());
+                EntityEcaHandler<?> entityEcaHandler = UtilGenerics.cast(eecahClass.getDeclaredConstructor().newInstance());
                 entityEcaHandler.setDelegator(this);
                 return entityEcaHandler;
-            } catch (ClassNotFoundException e) {
+            } catch (ReflectiveOperationException e) {
                 Debug.logWarning(e, "EntityEcaHandler class with name " + entityEcaHandlerClassName + " was not found, Entity ECA Rules will be disabled", module);
-            } catch (InstantiationException e) {
-                Debug.logWarning(e, "EntityEcaHandler class with name " + entityEcaHandlerClassName + " could not be instantiated, Entity ECA Rules will be disabled", module);
-            } catch (IllegalAccessException e) {
-                Debug.logWarning(e, "EntityEcaHandler class with name " + entityEcaHandlerClassName + " could not be accessed (illegal), Entity ECA Rules will be disabled", module);
             } catch (ClassCastException e) {
                 Debug.logWarning(e, "EntityEcaHandler class with name " + entityEcaHandlerClassName + " does not implement the EntityEcaHandler interface, Entity ECA Rules will be disabled", module);
             }
@@ -440,7 +431,7 @@ public class GenericDelegator implements Delegator {
             }
         }
 
-        Map<String, ModelEntity> entities = new HashMap<String, ModelEntity>();
+        Map<String, ModelEntity> entities = new HashMap<>();
         if (UtilValidate.isEmpty(entityNameSet)) {
             return entities;
         }
@@ -545,9 +536,8 @@ public class GenericDelegator implements Delegator {
 
         if (helperInfo != null) {
             return GenericHelperFactory.getHelper(helperInfo);
-        } else {
-            throw new GenericEntityException("There is no datasource (Helper) configured for the entity-group [" + this.getEntityGroupName(entityName) + "]; was trying to find datasource (helper) for entity [" + entityName + "]");
         }
+        throw new GenericEntityException("There is no datasource (Helper) configured for the entity-group [" + this.getEntityGroupName(entityName) + "]; was trying to find datasource (helper) for entity [" + entityName + "]");
     }
 
     /* (non-Javadoc)
@@ -580,24 +570,6 @@ public class GenericDelegator implements Delegator {
             throw new IllegalArgumentException("ModelFieldTypeReader not found for entity " + entity.getEntityName() + " with helper name " + helperName);
         }
         return modelFieldTypeReader;
-    }
-
-    /* (non-Javadoc)
-     * @see org.apache.ofbiz.entity.Delegator#getEntityFieldTypeNames(org.apache.ofbiz.entity.model.ModelEntity)
-     */
-    @Override
-    public Collection<String> getEntityFieldTypeNames(ModelEntity entity) throws GenericEntityException {
-        String helperName = getEntityHelperName(entity);
-
-        if (UtilValidate.isEmpty(helperName)) {
-            return null;
-        }
-        ModelFieldTypeReader modelFieldTypeReader = ModelFieldTypeReader.getModelFieldTypeReader(helperName);
-
-        if (modelFieldTypeReader == null) {
-            throw new GenericEntityException("ModelFieldTypeReader not found for entity " + entity.getEntityName() + " with helper name " + helperName);
-        }
-        return modelFieldTypeReader.getFieldTypeNames();
     }
 
     /* (non-Javadoc)
@@ -786,7 +758,7 @@ public class GenericDelegator implements Delegator {
             value.setDelegator(this);
 
             // if audit log on for any fields, save new value with no old value because it's a create
-            if (value != null && value.getModelEntity().getHasFieldWithAuditLog()) {
+            if (value.getModelEntity().getHasFieldWithAuditLog()) {
                 createEntityAuditLogAll(value, false, false);
             }
 
@@ -796,7 +768,7 @@ public class GenericDelegator implements Delegator {
                 if (testMode) {
                     storeForTestRollback(new TestOperation(OperationType.INSERT, value));
                 }
-            } catch (GenericEntityException e) {
+            } catch (IllegalStateException | GenericEntityException e) {
                 // see if this was caused by an existing record before resetting the sequencer and trying again
                 // NOTE: use the helper directly so ECA rules, etc won't be run
 
@@ -809,23 +781,22 @@ public class GenericDelegator implements Delegator {
                 }
                 if (existingValue == null) {
                     throw e;
-                } else {
-                    if (Debug.infoOn()) {
-                        Debug.logInfo("Error creating entity record with a sequenced value [" + value.getPrimaryKey() + "], trying again about to refresh bank for entity [" + value.getEntityName() + "]", module);
-                    }
+                }
+                if (Debug.infoOn()) {
+                    Debug.logInfo("Error creating entity record with a sequenced value [" + value.getPrimaryKey() + "], trying again about to refresh bank for entity [" + value.getEntityName() + "]", module);
+                }
 
-                    // found an existing value... was probably a duplicate key, so clean things up and try again
-                    this.AtomicRefSequencer.get().forceBankRefresh(value.getEntityName(), 1);
+                // found an existing value... was probably a duplicate key, so clean things up and try again
+                this.AtomicRefSequencer.get().forceBankRefresh(value.getEntityName(), 1);
 
-                    value.setNextSeqId();
-                    value = helper.create(value);
-                    if (Debug.infoOn()) {
-                        Debug.logInfo("Successfully created new entity record on retry with a sequenced value [" + value.getPrimaryKey() + "], after getting refreshed bank for entity [" + value.getEntityName() + "]", module);
-                    }
+                value.setNextSeqId();
+                value = helper.create(value);
+                if (Debug.infoOn()) {
+                    Debug.logInfo("Successfully created new entity record on retry with a sequenced value [" + value.getPrimaryKey() + "], after getting refreshed bank for entity [" + value.getEntityName() + "]", module);
+                }
 
-                    if (testMode) {
-                        storeForTestRollback(new TestOperation(OperationType.INSERT, value));
-                    }
+                if (testMode) {
+                    storeForTestRollback(new TestOperation(OperationType.INSERT, value));
                 }
             }
 
@@ -838,13 +809,14 @@ public class GenericDelegator implements Delegator {
                     ecaRunner.evalRules(EntityEcaHandler.EV_CACHE_CLEAR, EntityEcaHandler.OP_CREATE, value, false);
                     this.clearCacheLine(value);
                 }
+                ecaRunner.evalRules(EntityEcaHandler.EV_RETURN, EntityEcaHandler.OP_CREATE, value, false);
             }
 
-            ecaRunner.evalRules(EntityEcaHandler.EV_RETURN, EntityEcaHandler.OP_CREATE, value, false);
             TransactionUtil.commit(beganTransaction);
             return value;
-        } catch (Exception e) {
-            String errMsg = "Failure in createSetNextSeqId operation for entity [" + value.getEntityName() + "]: " + e.toString() + ". Rolling back transaction.";
+        } catch (GenericEntityException e) {
+            String entityName = value != null ? value.getEntityName() : "invalid Generic Value";
+            String errMsg = "Failure in createSetNextSeqId operation for entity [" + entityName + "]: " + e.toString() + ". Rolling back transaction.";
             Debug.logError(e, errMsg, module);
             TransactionUtil.rollback(beganTransaction, errMsg, e);
             throw new GenericEntityException(e);
@@ -876,7 +848,7 @@ public class GenericDelegator implements Delegator {
             value.setDelegator(this);
 
             // if audit log on for any fields, save new value with no old value because it's a create
-            if (value != null && value.getModelEntity().getHasFieldWithAuditLog()) {
+            if (value.getModelEntity().getHasFieldWithAuditLog()) {
                 createEntityAuditLogAll(value, false, false);
             }
 
@@ -894,13 +866,13 @@ public class GenericDelegator implements Delegator {
                     ecaRunner.evalRules(EntityEcaHandler.EV_CACHE_CLEAR, EntityEcaHandler.OP_CREATE, value, false);
                     this.clearCacheLine(value);
                 }
+                ecaRunner.evalRules(EntityEcaHandler.EV_RETURN, EntityEcaHandler.OP_CREATE, value, false);
             }
 
-            ecaRunner.evalRules(EntityEcaHandler.EV_RETURN, EntityEcaHandler.OP_CREATE, value, false);
             TransactionUtil.commit(beganTransaction);
             return value;
-        } catch (Exception e) {
-            String errMsg = "Failure in create operation for entity [" + (value != null ? value.getEntityName() : "null") + "]: " + e.toString() + ". Rolling back transaction.";
+        } catch (IllegalStateException | GenericEntityException e) {
+            String errMsg = "Failure in create operation for entity [" + (value != null ? value.getEntityName() : "value is null") + "]: " + e.toString() + ". Rolling back transaction.";
             Debug.logError(errMsg, module);
             TransactionUtil.rollback(beganTransaction, errMsg, e);
             throw new GenericEntityException(e);
@@ -930,7 +902,7 @@ public class GenericDelegator implements Delegator {
             TransactionUtil.commit(beganTransaction);
             return value;
         } catch (Exception e) {
-            String errMsg = "Failure in createOrStore operation for entity [" + value.getEntityName() + "]: " + e.toString() + ". Rolling back transaction.";
+            String errMsg = "Failure in createOrStore operation for entity [" + (value != null ? value.getEntityName() : "value is null") + "]: " + e.toString() + ". Rolling back transaction.";
             Debug.logError(e, errMsg, module);
             TransactionUtil.rollback(beganTransaction, errMsg, e);
             throw new GenericEntityException(e);
@@ -951,11 +923,7 @@ public class GenericDelegator implements Delegator {
         String serializedPK = null;
         try {
             serializedPK = XmlSerializer.serialize(dummyPK);
-        } catch (SerializeException e) {
-            Debug.logError(e, "Could not serialize primary key to save EntitySyncRemove", module);
-        } catch (FileNotFoundException e) {
-            Debug.logError(e, "Could not serialize primary key to save EntitySyncRemove", module);
-        } catch (IOException e) {
+        } catch (SerializeException | IOException e) {
             Debug.logError(e, "Could not serialize primary key to save EntitySyncRemove", module);
         }
 
@@ -999,7 +967,9 @@ public class GenericDelegator implements Delegator {
             ecaRunner.evalRules(EntityEcaHandler.EV_CACHE_CLEAR, EntityEcaHandler.OP_REMOVE, primaryKey, false);
             this.clearCacheLine(primaryKey);
 
-            this.saveEntitySyncRemoveInfo(primaryKey);
+            if (saveEntitySyncRemoveInfo) {
+                this.saveEntitySyncRemoveInfo(primaryKey);
+            }
 
             if (testMode) {
                 if (removedEntity != null) {
@@ -1010,7 +980,7 @@ public class GenericDelegator implements Delegator {
             ecaRunner.evalRules(EntityEcaHandler.EV_RETURN, EntityEcaHandler.OP_REMOVE, primaryKey, false);
             TransactionUtil.commit(beganTransaction);
             return num;
-        } catch (Exception e) {
+        } catch (IllegalStateException | GenericEntityException e) {
             String errMsg = "Failure in removeByPrimaryKey operation for entity [" + primaryKey.getEntityName() + "]: " + e.toString() + ". Rolling back transaction.";
             Debug.logError(e, errMsg, module);
             TransactionUtil.rollback(beganTransaction, errMsg, e);
@@ -1062,12 +1032,14 @@ public class GenericDelegator implements Delegator {
                 }
             }
 
-            this.saveEntitySyncRemoveInfo(value.getPrimaryKey());
+            if (saveEntitySyncRemoveInfo) {
+                this.saveEntitySyncRemoveInfo(value.getPrimaryKey());
+            }
 
             ecaRunner.evalRules(EntityEcaHandler.EV_RETURN, EntityEcaHandler.OP_REMOVE, value, false);
             TransactionUtil.commit(beganTransaction);
             return num;
-        } catch (Exception e) {
+        } catch (IllegalStateException | GenericEntityException e) {
             String errMsg = "Failure in removeValue operation for entity [" + value.getEntityName() + "]: " + e.toString() + ". Rolling back transaction.";
             Debug.logError(e, errMsg, module);
             TransactionUtil.rollback(beganTransaction, errMsg, e);
@@ -1106,14 +1078,28 @@ public class GenericDelegator implements Delegator {
             ModelEntity modelEntity = getModelReader().getModelEntity(entityName);
             GenericHelper helper = getEntityHelper(entityName);
 
-            List<GenericValue> removedEntities = null;
-            if (testMode) {
-                removedEntities = this.findList(entityName, condition, null, null, null, false);
-            }
+            // We check if there are eca rules for this entity
+            String entityEcaReaderName = EntityEcaUtil.getEntityEcaReaderName(this.delegatorBaseName);
+            boolean hasEntityEcaRules = UtilValidate.isNotEmpty(
+                    EntityEcaUtil.getEntityEcaCache(entityEcaReaderName).get(entityName));
 
-            int rowsAffected = helper.removeByCondition(this, modelEntity, condition);
-            if (rowsAffected > 0) {
-                this.clearCacheLine(entityName);
+            // When we delete in mass, if we are in test mode or the entity have an eeca linked we will remove one by one
+            // for test mode to help the rollback
+            // for eeca to analyse each value to check if a condition match
+            List<GenericValue> removedEntities = (testMode || hasEntityEcaRules)
+                ? findList(entityName, condition, null, null, null, false)
+                : Collections.emptyList();
+
+            int rowsAffected = 0;
+            if (! removedEntities.isEmpty()) {
+                for (GenericValue entity : removedEntities) {
+                    rowsAffected += removeValue(entity);
+                }
+            } else {
+                rowsAffected = helper.removeByCondition(this, modelEntity, condition);
+                if (rowsAffected > 0) {
+                    this.clearCacheLine(entityName);
+                }
             }
 
             if (testMode) {
@@ -1123,7 +1109,7 @@ public class GenericDelegator implements Delegator {
             }
             TransactionUtil.commit(beganTransaction);
             return rowsAffected;
-        } catch (Exception e) {
+        } catch (IllegalStateException | GenericEntityException e) {
             String errMsg = "Failure in removeByCondition operation for entity [" + entityName + "]: " + e.toString() + ". Rolling back transaction.";
             Debug.logError(e, errMsg, module);
             TransactionUtil.rollback(beganTransaction, errMsg, e);
@@ -1143,7 +1129,7 @@ public class GenericDelegator implements Delegator {
             throw new GenericModelException("Could not find relation for relationName: " + relationName + " for value " + value);
         }
 
-        Map<String, Object> fields = new HashMap<String, Object>();
+        Map<String, Object> fields = new HashMap<>();
         for (ModelKeyMap keyMap : relation.getKeyMaps()) {
             fields.put(keyMap.getRelFieldName(), value.get(keyMap.getFieldName()));
         }
@@ -1205,7 +1191,7 @@ public class GenericDelegator implements Delegator {
             }
             TransactionUtil.commit(beganTransaction);
             return rowsAffected;
-        } catch (Exception e) {
+        } catch (IllegalStateException | GenericEntityException e) {
             String errMsg = "Failure in storeByCondition operation for entity [" + entityName + "]: " + e.toString() + ". Rolling back transaction.";
             Debug.logError(e, errMsg, module);
             TransactionUtil.rollback(beganTransaction, errMsg, e);
@@ -1258,7 +1244,7 @@ public class GenericDelegator implements Delegator {
             ecaRunner.evalRules(EntityEcaHandler.EV_RETURN, EntityEcaHandler.OP_STORE, value, false);
             TransactionUtil.commit(beganTransaction);
             return retVal;
-        } catch (Exception e) {
+        } catch (IllegalStateException | GenericEntityException e) {
             String errMsg = "Failure in store operation for entity [" + value.getEntityName() + "]: " + e.toString() + ". Rolling back transaction.";
             Debug.logError(e, errMsg, module);
             TransactionUtil.rollback(beganTransaction, errMsg, e);
@@ -1284,7 +1270,9 @@ public class GenericDelegator implements Delegator {
         }
 
         // if no store options passed, use default
-        if (storeOptions == null) storeOptions = new EntityStoreOptions();
+        if (storeOptions == null) {
+            storeOptions = new EntityStoreOptions();
+        }
 
         int numberChanged = 0;
 
@@ -1302,7 +1290,7 @@ public class GenericDelegator implements Delegator {
                 if (!primaryKey.isPrimaryKey()) {
                     throw new GenericModelException("[GenericDelegator.storeAll] One of the passed primary keys is not a valid primary key: " + primaryKey);
                 }
-                GenericValue existing = null;
+                GenericValue existing;
                 try {
                     existing = helper.findByPrimaryKey(primaryKey);
                 } catch (GenericEntityNotFoundException e) {
@@ -1327,7 +1315,7 @@ public class GenericDelegator implements Delegator {
                         if (value.containsKey(fieldName)) {
                             Object fieldValue = value.get(fieldName);
                             Object oldValue = existing.get(fieldName);
-                            if (!UtilObject.equalsHelper(oldValue, fieldValue)) {
+                            if (!Objects.equals(oldValue, fieldValue)) {
                                 toStore.put(fieldName, fieldValue);
                                 atLeastOneField = true;
                             }
@@ -1344,7 +1332,7 @@ public class GenericDelegator implements Delegator {
             }
             TransactionUtil.commit(beganTransaction);
             return numberChanged;
-        } catch (Exception e) {
+        } catch (GenericEntityException e) {
             String errMsg = "Failure in storeAll operation: " + e.toString() + ". Rolling back transaction.";
             Debug.logError(e, errMsg, module);
             TransactionUtil.rollback(beganTransaction, errMsg, e);
@@ -1382,7 +1370,7 @@ public class GenericDelegator implements Delegator {
             }
             TransactionUtil.commit(beganTransaction);
             return numRemoved;
-        } catch (Exception e) {
+        } catch (GenericEntityException e) {
             String errMsg = "Failure in removeAll operation: " + e.toString() + ". Rolling back transaction.";
             Debug.logError(e, errMsg, module);
             TransactionUtil.rollback(beganTransaction, errMsg, e);
@@ -1455,7 +1443,7 @@ public class GenericDelegator implements Delegator {
             ecaRunner.evalRules(EntityEcaHandler.EV_RETURN, EntityEcaHandler.OP_FIND, (value == null ? primaryKey : value), false);
             TransactionUtil.commit(beganTransaction);
             return value;
-        } catch (Exception e) {
+        } catch (GenericEntityException e) {
             String errMsg = "Failure in findOne operation for entity [" + entityName + "]: " + e.toString() + ". Rolling back transaction.";
             Debug.logError(e, errMsg, module);
             TransactionUtil.rollback(beganTransaction, errMsg, e);
@@ -1489,12 +1477,14 @@ public class GenericDelegator implements Delegator {
                 value = helper.findByPrimaryKeyPartial(primaryKey, keys);
             } catch (GenericEntityNotFoundException e) {
             }
-            if (value != null) value.setDelegator(this);
+            if (value != null) {
+                value.setDelegator(this);
+            }
 
             ecaRunner.evalRules(EntityEcaHandler.EV_RETURN, EntityEcaHandler.OP_FIND, primaryKey, false);
             TransactionUtil.commit(beganTransaction);
             return value;
-        } catch (Exception e) {
+        } catch (GenericEntityException e) {
             String errMsg = "Failure in findByPrimaryKeyPartial operation for entity [" + primaryKey.getEntityName() + "]: " + e.toString() + ". Rolling back transaction.";
             Debug.logError(e, errMsg, module);
             TransactionUtil.rollback(beganTransaction, errMsg, e);
@@ -1581,17 +1571,9 @@ public class GenericDelegator implements Delegator {
                 beganTransaction = TransactionUtil.begin();
             }
 
-            EntityListIterator eli = null;
             List<GenericValue> list = null;
-            try {
-                eli = this.find(entityName, entityCondition, null, fieldsToSelect, orderBy, findOptions);
+            try (EntityListIterator eli = this.find(entityName, entityCondition, null, fieldsToSelect, orderBy, findOptions)) {
                 list = eli.getCompleteList();
-            } finally {
-                if (eli != null) {
-                    try {
-                        eli.close();
-                    } catch (Exception exc) {}
-                }
             }
 
             if (useCache) {
@@ -1600,7 +1582,7 @@ public class GenericDelegator implements Delegator {
             }
             TransactionUtil.commit(beganTransaction);
             return list;
-        } catch (Exception e) {
+        } catch (GenericEntityException e) {
             String errMsg = "Failure in findByCondition operation for entity [" + entityName + "]: " + e.toString() + ". Rolling back transaction.";
             Debug.logError(e, errMsg, module);
             TransactionUtil.rollback(beganTransaction, errMsg, e);
@@ -1624,8 +1606,12 @@ public class GenericDelegator implements Delegator {
         }
 
         ModelViewEntity modelViewEntity = dynamicViewEntity.makeModelViewEntity(this);
-        if (whereEntityCondition != null) whereEntityCondition.checkCondition(modelViewEntity);
-        if (havingEntityCondition != null) havingEntityCondition.checkCondition(modelViewEntity);
+        if (whereEntityCondition != null) {
+            whereEntityCondition.checkCondition(modelViewEntity);
+        }
+        if (havingEntityCondition != null) {
+            havingEntityCondition.checkCondition(modelViewEntity);
+        }
 
         GenericHelper helper = getEntityHelper(dynamicViewEntity.getOneRealEntityName());
         EntityListIterator eli = helper.findListIteratorByCondition(this, modelViewEntity, whereEntityCondition,
@@ -1667,7 +1653,7 @@ public class GenericDelegator implements Delegator {
             ecaRunner.evalRules(EntityEcaHandler.EV_RETURN, EntityEcaHandler.OP_FIND, dummyValue, false);
             TransactionUtil.commit(beganTransaction);
             return count;
-        } catch (Exception e) {
+        } catch (GenericEntityException e) {
             String errMsg = "Failure in findListIteratorByCondition operation for entity [DynamicView]: " + e.toString() + ". Rolling back transaction.";
             Debug.logError(e, errMsg, module);
             TransactionUtil.rollback(beganTransaction, errMsg, e);
@@ -1698,7 +1684,7 @@ public class GenericDelegator implements Delegator {
             List<GenericValue> result = helper.findByMultiRelation(value, modelRelationOne, modelEntityOne, modelRelationTwo, modelEntityTwo, orderBy);
             TransactionUtil.commit(beganTransaction);
             return result;
-        } catch (Exception e) {
+        } catch (GenericEntityException e) {
             String errMsg = "Failure in getMultiRelation operation for entity [" + value.getEntityName() + "]: " + e.toString() + ". Rolling back transaction.";
             Debug.logError(e, errMsg, module);
             TransactionUtil.rollback(beganTransaction, errMsg, e);
@@ -1720,7 +1706,7 @@ public class GenericDelegator implements Delegator {
 
         // put the byAndFields (if not null) into the hash map first,
         // they will be overridden by value's fields if over-specified this is important for security and cleanliness
-        Map<String, Object> fields = new HashMap<String, Object>();
+        Map<String, Object> fields = new HashMap<>();
         if (byAndFields != null) {
             fields.putAll(byAndFields);
         }
@@ -1746,7 +1732,7 @@ public class GenericDelegator implements Delegator {
 
         // put the byAndFields (if not null) into the hash map first,
         // they will be overridden by value's fields if over-specified this is important for security and cleanliness
-        Map<String, Object> fields = new HashMap<String, Object>();
+        Map<String, Object> fields = new HashMap<>();
         if (byAndFields != null) {
             fields.putAll(byAndFields);
         }
@@ -1771,7 +1757,7 @@ public class GenericDelegator implements Delegator {
             throw new GenericModelException("Relation is not a 'one' or a 'one-nofk' relation: " + relationName + " of entity " + value.getEntityName());
         }
 
-        Map<String, Object> fields = new HashMap<String, Object>();
+        Map<String, Object> fields = new HashMap<>();
         for (ModelKeyMap keyMap : relation.getKeyMaps()) {
             fields.put(keyMap.getRelFieldName(), value.get(keyMap.getFieldName()));
         }
@@ -1866,7 +1852,9 @@ public class GenericDelegator implements Delegator {
     public void clearCacheLineFlexible(GenericEntity dummyPK, boolean distribute) {
         if (dummyPK != null) {
             //if never cached, then don't bother clearing
-            if (dummyPK.getModelEntity().getNeverCache()) return;
+            if (dummyPK.getModelEntity().getNeverCache()) {
+                return;
+            }
 
             cache.remove(dummyPK);
 
@@ -1960,7 +1948,6 @@ public class GenericDelegator implements Delegator {
      */
     @Override
     public void clearCacheLine(GenericValue value, boolean distribute) {
-        // Debug.logInfo("running clearCacheLine for value: " + value + ", distribute: " + distribute, module);
         if (value == null) {
             return;
         }
@@ -2062,7 +2049,7 @@ public class GenericDelegator implements Delegator {
      */
     @Override
     public void setDistributedCacheClear(DistributedCacheClear distributedCacheClear) {
-        this.distributedCacheClear.set(new ConstantFuture<DistributedCacheClear>(distributedCacheClear));
+        this.distributedCacheClear.set(new ConstantFuture<>(distributedCacheClear));
     }
 
     // ======= XML Related Methods ========
@@ -2085,7 +2072,7 @@ public class GenericDelegator implements Delegator {
         if (document == null) {
             return null;
         }
-        List<GenericValue> values = new LinkedList<GenericValue>();
+        List<GenericValue> values = new LinkedList<>();
 
         Element docElement = document.getDocumentElement();
 
@@ -2191,9 +2178,6 @@ public class GenericDelegator implements Delegator {
             if (entityEcaHandler == null) {
                 return;
             }
-            //if (!"find".equals(currentOperation)) {
-            //    Debug.logWarning("evalRules for entity " + value.getEntityName() + ", currentOperation " + currentOperation + ", event " + event, module);
-            //}
             entityEcaHandler.evalRules(currentOperation, eventMap, event, value, isError);
         }
     }
@@ -2206,7 +2190,7 @@ public class GenericDelegator implements Delegator {
     }
 
     protected static <T> EntityEcaRuleRunner<T> createEntityEcaRuleRunner(EntityEcaHandler<T> entityEcaHandler, String entityName) {
-        return new EntityEcaRuleRunner<T>(entityEcaHandler, entityEcaHandler != null ? entityEcaHandler.getEntityEventMap(entityName) : null);
+        return new EntityEcaRuleRunner<>(entityEcaHandler, entityEcaHandler != null ? entityEcaHandler.getEntityEventMap(entityName) : null);
     }
 
     /* (non-Javadoc)
@@ -2226,9 +2210,7 @@ public class GenericDelegator implements Delegator {
         Future<EntityEcaHandler<?>> future = this.entityEcaHandler.get();
         try {
             return UtilGenerics.cast(future != null ? future.get() : null);
-        } catch (ExecutionException e) {
-            Debug.logError(e, "Could not fetch EntityEcaHandler from the asynchronous instantiation", module);
-        } catch (InterruptedException e) {
+        } catch (ExecutionException | InterruptedException e) {
             Debug.logError(e, "Could not fetch EntityEcaHandler from the asynchronous instantiation", module);
         }
         return null;
@@ -2256,22 +2238,16 @@ public class GenericDelegator implements Delegator {
 
         if (UtilValidate.isNotEmpty(this.delegatorInfo.getSequencedIdPrefix())) {
             return this.delegatorInfo.getSequencedIdPrefix() + nextSeqLong.toString();
-        } else {
-            return nextSeqLong.toString();
         }
+        return nextSeqLong.toString();
     }
 
-    /* (non-Javadoc)
-     * @see org.apache.ofbiz.entity.Delegator#getNextSeqIdLong(java.lang.String)
-     */
     @Override
     public Long getNextSeqIdLong(String seqName) {
         return this.getNextSeqIdLong(seqName, 1);
     }
 
-    /* (non-Javadoc)
-     * @see org.apache.ofbiz.entity.Delegator#getNextSeqIdLong(java.lang.String, long)
-     */
+    @Override
     public Long getNextSeqIdLong(String seqName, long staggerMax) {
         try {
             SequenceUtil sequencer = this.AtomicRefSequencer.get();
@@ -2334,7 +2310,6 @@ public class GenericDelegator implements Delegator {
 
                 // get values in whatever order, we will go through all of them to find the highest value
                 List<GenericValue> allValues = this.findByAnd(value.getEntityName(), lookupValue, null, false);
-                //Debug.logInfo("Get existing values from entity " + value.getEntityName() + " with lookupValue: " + lookupValue + ", and the seqFieldName: " + seqFieldName + ", and the results are: " + allValues, module);
                 Integer highestSeqVal = null;
                 for (GenericValue curValue: allValues) {
                     String currentSeqId = curValue.getString(seqFieldName);
@@ -2348,22 +2323,22 @@ public class GenericDelegator implements Delegator {
                         }
                         try {
                             int seqVal = Integer.parseInt(currentSeqId);
-                            if (highestSeqVal == null || seqVal > highestSeqVal.intValue()) {
-                                highestSeqVal = Integer.valueOf(seqVal);
+                            if (highestSeqVal == null || seqVal > highestSeqVal) {
+                                highestSeqVal = seqVal;
                             }
-                        } catch (Exception e) {
+                        } catch (NumberFormatException e) {
                             Debug.logWarning("Error in make-next-seq-id converting SeqId [" + currentSeqId + "] in field: " + seqFieldName + " from entity: " + value.getEntityName() + " to a number: " + e.toString(), module);
                         }
                     }
                 }
 
-                int seqValToUse = (highestSeqVal == null ? 1 : highestSeqVal.intValue() + incrementBy);
+                int seqValToUse = (highestSeqVal == null ? 1 : highestSeqVal + incrementBy);
                 String newSeqId = sequencedIdPrefix + UtilFormatOut.formatPaddedNumber(seqValToUse, numericPadding);
                 value.set(seqFieldName, newSeqId);
 
                 // only commit the transaction if we started one...
                 TransactionUtil.commit(beganTransaction);
-            } catch (Exception e) {
+            } catch (GenericEntityException e) {
                 String errMsg = "Failure in setNextSubSeqId operation for entity [" + value.getEntityName() + "]: " + e.toString() + ". Rolling back transaction.";
                 Debug.logError(e, errMsg, module);
                 try {
@@ -2389,15 +2364,6 @@ public class GenericDelegator implements Delegator {
             return this.crypto.encrypt(entityName, encryptMethod, fieldValue);
         }
         return fieldValue;
-    }
-
-    @Override
-    @Deprecated
-    public Object decryptFieldValue(String entityName, String encValue) throws EntityCryptoException {
-        if (UtilValidate.isNotEmpty(encValue)) {
-            return this.crypto.decrypt(entityName, ModelField.EncryptMethod.TRUE, encValue);
-        }
-        return null;
     }
 
     /* (non-Javadoc)
@@ -2608,7 +2574,7 @@ public class GenericDelegator implements Delegator {
         this.testMode = true;
     }
 
-    public final class TestOperation {
+    public final static class TestOperation {
         private final OperationType operation;
         private final GenericValue value;
 
@@ -2636,12 +2602,8 @@ public class GenericDelegator implements Delegator {
             return;
         }
 
-        Callable<DistributedCacheClear> creator = new Callable<DistributedCacheClear>() {
-            public DistributedCacheClear call() {
-                return createDistributedCacheClear();
-            }
-        };
-        FutureTask<DistributedCacheClear> futureTask = new FutureTask<DistributedCacheClear>(creator);
+        Callable<DistributedCacheClear> creator = () -> createDistributedCacheClear();
+        FutureTask<DistributedCacheClear> futureTask = new FutureTask<>(creator);
         if (distributedCacheClear.compareAndSet(null, futureTask)) {
             ExecutionPool.GLOBAL_BATCH.submit(futureTask);
         }
@@ -2657,20 +2619,16 @@ public class GenericDelegator implements Delegator {
 
             try {
                 Class<?> dccClass = loader.loadClass(distributedCacheClearClassName);
-                DistributedCacheClear distributedCacheClear = UtilGenerics.cast(dccClass.newInstance());
+                DistributedCacheClear distributedCacheClear = UtilGenerics.cast(dccClass.getDeclaredConstructor().newInstance());
                 distributedCacheClear.setDelegator(this, this.delegatorInfo.getDistributedCacheClearUserLoginId());
                 return distributedCacheClear;
-            } catch (ClassNotFoundException e) {
+            } catch (ReflectiveOperationException e) {
                 Debug.logWarning(e, "DistributedCacheClear class with name " + distributedCacheClearClassName + " was not found, distributed cache clearing will be disabled", module);
-            } catch (InstantiationException e) {
-                Debug.logWarning(e, "DistributedCacheClear class with name " + distributedCacheClearClassName + " could not be instantiated, distributed cache clearing will be disabled", module);
-            } catch (IllegalAccessException e) {
-                Debug.logWarning(e, "DistributedCacheClear class with name " + distributedCacheClearClassName + " could not be accessed (illegal), distributed cache clearing will be disabled", module);
             } catch (ClassCastException e) {
                 Debug.logWarning(e, "DistributedCacheClear class with name " + distributedCacheClearClassName + " does not implement the DistributedCacheClear interface, distributed cache clearing will be disabled", module);
             }
         } else {
-            Debug.logVerbose("Distributed Cache Clear System disabled for delegator [" + delegatorFullName + "]", module);
+            if (Debug.verboseOn()) Debug.logVerbose("Distributed Cache Clear System disabled for delegator [" + delegatorFullName + "]", module);
         }
         return null;
     }
@@ -2679,9 +2637,7 @@ public class GenericDelegator implements Delegator {
         Future<DistributedCacheClear> future = this.distributedCacheClear.get();
         try {
             return future != null ? future.get() : null;
-        } catch (ExecutionException e) {
-            Debug.logError(e, "Could not fetch DistributedCacheClear from the asynchronous instantiation", module);
-        } catch (InterruptedException e) {
+        } catch (ExecutionException | InterruptedException e) {
             Debug.logError(e, "Could not fetch DistributedCacheClear from the asynchronous instantiation", module);
         }
         return null;
