@@ -24,7 +24,6 @@ import java.io.Writer;
 import java.util.HashMap;
 import java.util.Map;
 
-import javax.servlet.ServletContext;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import javax.servlet.http.HttpSession;
@@ -74,7 +73,7 @@ public class HtmlMenuWrapper {
 
         this.renderer = getMenuRenderer();
 
-        this.context = new HashMap<String, Object>();
+        this.context = new HashMap<>();
         Map<String, Object> parameterMap = UtilHttp.getParameterMap(request);
         context.put("parameters", parameterMap);
 
@@ -104,18 +103,20 @@ public class HtmlMenuWrapper {
 
     public String renderMenuString() throws IOException {
         HttpServletRequest req = ((HtmlMenuRenderer)renderer).request;
-        ServletContext ctx = (ServletContext) req.getAttribute("servletContext");
-        if (ctx == null) {
-            if (Debug.infoOn()) Debug.logInfo("in renderMenuString, ctx is null(0)" , "");
+        if (req.getServletContext() == null) {
+            if (Debug.infoOn()) {
+                Debug.logInfo("in renderMenuString, ctx is null(0)" , "");
+            }
         }
 
         Writer writer = new StringWriter();
         modelMenu.renderMenuString(writer, context, renderer);
 
         HttpServletRequest req2 = ((HtmlMenuRenderer)renderer).request;
-        ServletContext ctx2 = (ServletContext) req2.getAttribute("servletContext");
-        if (ctx2 == null) {
-            if (Debug.infoOn()) Debug.logInfo("in renderMenuString, ctx is null(2)" , "");
+        if (req2.getServletContext() == null) {
+            if (Debug.infoOn()) {
+                Debug.logInfo("in renderMenuString, ctx is null(2)" , "");
+            }
         }
 
         return writer.toString();
@@ -129,7 +130,7 @@ public class HtmlMenuWrapper {
      * parameters Map instead of the value Map.
      */
     public void setIsError(boolean isError) {
-        this.context.put("isError", Boolean.valueOf(isError));
+        this.context.put("isError", isError);
     }
 
     public boolean getIsError() {
@@ -137,7 +138,7 @@ public class HtmlMenuWrapper {
         if (isErrorBoolean == null) {
             return false;
         } else {
-            return isErrorBoolean.booleanValue();
+            return isErrorBoolean;
         }
     }
 
@@ -150,9 +151,10 @@ public class HtmlMenuWrapper {
     }
 
     public void putInContext(String menuItemName, String valueName,  Object value) {
-        Map<String, Object> valueMap = UtilGenerics.toMap(context.get(menuItemName));
+        Object obj = context.get(menuItemName);
+        Map<String, Object> valueMap = (obj instanceof Map) ? UtilGenerics.cast(obj) : null;
         if (valueMap == null) {
-            valueMap = new HashMap<String, Object>();
+            valueMap = new HashMap<>();
             context.put(menuItemName, valueMap);
         }
         valueMap.put(valueName, value);
@@ -163,9 +165,10 @@ public class HtmlMenuWrapper {
     }
 
     public Object getFromContext(String menuItemName, String valueName) {
-        Map<String, Object> valueMap = UtilGenerics.toMap(context.get(menuItemName));
+        Object obj = context.get(menuItemName);
+        Map<String, Object> valueMap = (obj instanceof Map) ? UtilGenerics.cast(obj) : null;
         if (valueMap == null) {
-            valueMap = new HashMap<String, Object>();
+            valueMap = new HashMap<>();
             context.put(menuItemName, valueMap);
         }
         return valueMap.get(valueName);
@@ -213,20 +216,12 @@ public class HtmlMenuWrapper {
         if (menuWrapper == null) {
             try {
                 Class<?> cls = Class.forName("org.apache.ofbiz.widget.html." + menuWrapperClassName);
-                menuWrapper = (HtmlMenuWrapper)cls.newInstance();
+                menuWrapper = (HtmlMenuWrapper)cls.getDeclaredConstructor().newInstance();
                 menuWrapper.init(menuDefFile, menuName, request, response);
-            } catch (InstantiationException e) {
+            } catch (InstantiationException | IllegalAccessException | IOException | SAXException | ParserConfigurationException e) {
                 throw new RuntimeException(e.getMessage());
-            } catch (IllegalAccessException e2) {
-                throw new RuntimeException(e2.getMessage());
-            } catch (ClassNotFoundException e3) {
-                throw new RuntimeException("Class not found:" + e3.getMessage());
-            } catch (IOException e4) {
-                throw new RuntimeException(e4.getMessage());
-            } catch (SAXException e5) {
-                throw new RuntimeException(e5.getMessage());
-            } catch (ParserConfigurationException e6) {
-                throw new RuntimeException(e6.getMessage());
+            } catch (ReflectiveOperationException e) {
+                throw new RuntimeException("Class not found:" + e.getMessage());
             }
         } else {
             menuWrapper.setRequest(request);
